[package]
name = "pomprt"
version = "0.2.0"
authors = ["rini <rini@rinici.de>"]
edition = "2021"
description = "a tiny prompt library"
repository = "https://codeberg.org/twink/pomprt"
license = "Apache-2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

[target.'cfg(windows)'.dependencies]
winapi.version = "0.3.9"
winapi.features = [
    "consoleapi",
    "handleapi",
    "processenv",
    "winbase",
]
