[package]
name = "pomprt"
version = "0.6.0"
authors = ["rini <rini@rinici.de>"]
edition = "2021"
description = "A small yet feature-rich readline prompt"
repository = "https://codeberg.org/rini/pomprt"
license = "Apache-2.0"
keywords = ["readline", "prompt"]
categories = ["command-line-interface"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

[dependencies]
rawrrr = "0.3.0"

[features]
default = ["suspend", "abort"]
suspend = []
abort = []
